fixed layout issues, changed scroll indicator icon

--- a/src/App.css
+++ b/src/App.css
@@ -156,10 +156,16 @@ html, body {
   position: relative;
   display: flex;
   padding-top: 2vh;
-  overflow: visible;
+  overflow: hidden;
   height: 10vh;
   width: 30vw;
   white-space: nowrap;
+  mask-image: linear-gradient(
+    to right,
+    transparent,
+    #000,
+    transparent
+  );
 }
 
 /* width: 40px
@@ -178,40 +184,31 @@ html, body {
   animation-play-state: paused!important;
 }
 
-.arrow-scroll {
+.scroll-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 30vh;
+}
+
+.mouse-scroll {
+  width: 2.1em;
+  height: 4em;
+  border: solid 2px #ffcc00;
+  border-radius: 30px;
   position: relative;
-  height: 10%;
 }
 
-.arrow {
-  margin-top: 8em;
-  border: solid white;
-  border-width: 0 5px 5px 0;
-  display: inline-block;
-  padding: 12px;
+.mouse-scroll::before {
+  content: '';
+  width: 0.4em;
+  height: 0.4em;
+  border-radius: 50%;
+  background: #99AAB5;
   position: absolute;
-  top: 0;
   left: 50%;
-  transform: 
-    translateX(-50%)
-    rotate(45deg);
-}
-
-.arrow:nth-child(2) {
-  animation:
-    arrow1 1.5s
-    ease-in-out infinite;
-}
-
-.arrow:nth-child(3) {
-  animation:
-    arrow2 1.5s
-    ease-in-out infinite;
-}
-
-.nebulAPIDemo {
-  width: 60rem;
-  height: auto;
+  transform: translateX(-50%);
+  animation: scroll 2.5s infinite;
 }
 
 .projects {
@@ -219,9 +216,34 @@ html, body {
   align-items: center;
   flex-direction: column;
   color: white;
-  height: 50rem;
+  height: auto;
   width: 100vw;
 }
+
+.nebula-title {
+  height: 10vh;
+}
+
+.nebula-vid-and-text {
+  display: flex;
+  flex-direction: row;
+  gap: 2vw;
+  height: 80vh;
+}
+
+.nebula-text {
+  width: 20vw;
+}
+
+.nebulAPIDemo {
+  width: 60vw;
+  height: auto;
+}
+
+.next-project {
+  height: 10vh;
+}
+
 
 /* animation stuff down here */
 @keyframes drawLine {
@@ -265,16 +287,13 @@ html, body {
   }
 }
 
-@keyframes arrow1 {
-  100% {
-    opacity: 0;
-    top: 100%;
+@keyframes scroll {
+  0% {
+    bottom: 80%;
+    opacity: 1;
   }
-}
-
-@keyframes arrow2 {
   100% {
+    bottom: 20%;
     opacity: 0;
-    top: 50%;
   }
 }
